# UppsalaParallelProgramming

MPI/MPIHello/: BlockingSendRecv.c  CMakeLists.txt  MPI_Bcast_Reduce.c  MPI_IrecvIsend.c  MPI_Scatter.c  main.c
MPI/MPIHello/Books/: MPI_ALLGather.c  MPI_ScatterAndGather.c  MPI_Scatterv.c
OMP/OMPIntegral/: CMakeLists.txt  main.c
OMP/OMPReviewing/: CMakeLists.txt  ForMain.c  SectionsMain.c  ThreadPrivate.c  main.c
OMP/OpenMPHello/: CMakeLists.txt  main.c
Pthread/Barrier/PthreadBarrier/: PthreadBarrier.h
Pthread/PThreadProducerCustomer/: CMakeLists.txt  main.c
Pthread/Pi/: CMakeLists.txt  main.c
Pthread/ReadWriteLock/PThreadWriteLock/: CMakeLists.txt  ReadWriteLock.c  ReadWriteLock.h  main.c
PthreadBarrier/: CMakeLists.txt  PthreadBarrier.c  main.c
Queue Locks/CLHLock/: CMakeLists.txt  main.c
Queue Locks/MCSLock/: CMakeLists.txt  main.c  main2.c
Queue Locks/QueueLock/: CMakeLists.txt  main.c
Queue Locks/TOLock/: CMakeLists.txt  main.c
Spin Locks/PetersonLock/: CMakeLists.txt  main.c
Spin Locks/TASLock/TASLock/: CMakeLists.txt  main.c
Spin Locks/TATASBackOffLock/: CMakeLists.txt  main.c
Spin Locks/TATASLock/: CMakeLists.txt  main.c
exam_preparation/MPIReviewingPreparation/: CMakeLists.txt  NewCommunicator.c  SendRecv.c  main.c
exam_preparation/OpenMPPreparation/: AtomicCriticalReduction.c  CMakeLists.txt  Case1.c  main.c
exam_preparation/OpenMPPreparation/exam/: exam1.c  exam2.c
exam_preparation/OpenMPPreparation/exercise/: exercise1.c  exercise2.c  exercise3.c  exercise4.c  exercise4_2.c  exercise5.c
exam_preparation/OpenMPPreparation/fib/: fib.c
exam_preparation/Pthread/: CMakeLists.txt  PthreadBarrier.c  PthreadBarrier.h  PthreadBarrierMain.c  Pthread_Onsumer_Producer.c  main.c
exam_preparation/Pthread/PthreadExam/: PthreadConsumer.c  PthreadConsumer2.c  PthreadMsg.c
exam_preparation/Pthread/ReadWriteLockPthread/: PthreadReadWriteLock.c  PthreadReadWriteLock.h  PthreadReadWriteLockMain.c
exam_preparation/Three3/: CMakeLists.txt
exam_preparation/Three3/Algorithm/: ALock.c  ALock2.c  CLHLock.c  MCSLock.c  TASLock.c  TTAS.c  TTASBackoffLock.c
exam_preparation/Three3/Algorithm/Last/: ALock.c  CLHLogic.c  MCSLogic.c
exam_preparation/Three3/OpenMP/: AtomicCriticalReduction.c  BarrierMain.c  Fib.c  OpenMpTest1.c  RecurationExercise.c  SectionsMain.c  SingleMain.c  ThreadPrivate.c
exam_preparation/Three3/Pthread/: PthreadCustomerConsumer.c  PthreadMessage.c  PthreadProducerConsumerCondition.c
exam_preparation/Three3/Pthread/PthreadBarrier/: PThreadBarrier.h  PThreadMain.c  PthreadBarrier.c
exam_preparation/Three3/Pthread/PthreadReadWriteLock/: PthreadReadWriteLock.c  PthreadReadWriteLock.h  PthreadReadWriteLockMain.c
exam_preparation/second/Again2/: ALock.c  ALock2.c  ALock3.c  BackLock.c  CLHLock.c  CLHLock2.c  CMakeLists.txt  MCSLock.c  PthreadCustomerConsumer.c  PthreadMessage.c  PthreadPi.c  PthreadProduceConsumerCondition.c  TASLock.c  TTASLock.c  main.c
exam_preparation/second/Again2/OpenMp/: Fib.c  OpenMpInit.c  OpenMpRecursion2.c  OpenMpTest1.c  OpenMpTest2.c  Recursion.c
exam_preparation/second/Again2/Pthread_barrier/: PthreadBarrier.c  PthreadBarrier.h  PthreadBarrierMain.c
exam_preparation/second/Again2/ReadWriteLock/: PthreadReadWriteLock.c  PthreadReadWriteLock.h  PthreadReadWriteLockMain.c
